fixed the overlay's z-index

--- a/front-end/styles/navBar.css
+++ b/front-end/styles/navBar.css
@@ -81,6 +81,7 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out;
+    z-index: 750;
 }
 
 .overlay.show {
